Fix text visibility in Chrome browser

--- a/client/common/sass/components/_blog-card-special.sass
+++ b/client/common/sass/components/_blog-card-special.sass
@@ -20,6 +20,7 @@
 	img
 		width: 100%
 		height: 100%
+		max-height: 600px
 		object-fit: cover
 		place-self: center
 		transition: transform 0.15s ease-in-out
